# brainmap

./: .gitignore  .mcp.json  CLAUDE.md  Cargo.toml  README.md  canvas-edge-debugging-reasoning-chain.md  e2e-testing-next-steps.md
.claude/: settings.json
.claude/agents/: code-reviewer.md  e2e-qa.md  frontend.md  plan-reviewer.md  rust-core.md  tauri-backend.md
.claude/plans/: breezy-knitting-steele.md  cosmic-wandering-river.md  crispy-growing-hinton.md  delegated-crafting-rabin.md  elegant-painting-origami.md  enumerated-finding-sprout.md  federated-wandering-cocke.md  flickering-skipping-lemur.md  glimmering-juggling-kazoo.md  indexed-foraging-floyd.md  kind-yawning-sparkle-agent-a4d9078299c5b30a8.md  kind-yawning-sparkle.md  resilient-sleeping-rabin.md
.claude/research/: ai-first-codebase-audit.md  ai-first-upgrades-implementation-plan.md  canvas-integration.md  drag-drop-investigation.md  editor-code-architecture-audit.md  editor-feature-opportunities.md  editor-functional-audit.md  editor-gap-analysis.md  excalidraw-integration.md  files-panel-gap-analysis.md  linking-notes-to-folders.md  pdf-viewer-roadmap.md  react-frontend-architecture.md  rust-backend-architecture.md  visual-testing-interaction-coverage.md  visual-testing-pipeline.md
.claude/sessions/: 2026-03-27-tauri-mcp-visual-testing-pipeline.md  2026-03-30-agent-teams-exploration.md  2026-03-30-e2e-test-infrastructure.md  2026-03-30-insights-driven-agent-infrastructure.md
.claude/todo/: INDEX.md  e2e-per-worker-app-instances.md
.claude/transcripts/: 2026-03-09-transcript-029c53be.md  2026-03-09-transcript-3447398a.md  2026-03-09-transcript-ba732d96.md  2026-03-09-transcript-c9c4641d.md  2026-03-10-transcript-073a3475.md  2026-03-10-transcript-122b6c40.md  2026-03-10-transcript-3447398a.md  2026-03-10-transcript-40f16652.md  2026-03-10-transcript-504142e5.md  2026-03-10-transcript-5ee4c9d5.md  2026-03-10-transcript-72b750a5.md  2026-03-10-transcript-770f36ad.md  2026-03-10-transcript-86a72d58.md  2026-03-10-transcript-897a11a8.md  2026-03-10-transcript-a8921ebf.md  2026-03-10-transcript-e775a4b6.md  2026-03-10-transcript-e8d4a0b2.md  2026-03-10-transcript-eb29557e.md  2026-03-10-transcript-fcf2d61a.md  2026-03-11-transcript-39b8b6f7.md  2026-03-11-transcript-48765b50.md  2026-03-11-transcript-5be69231.md  2026-03-11-transcript-7ae8219c.md  2026-03-11-transcript-8727a794.md  2026-03-11-transcript-9a4a4fde.md  2026-03-11-transcript-ab521ffa.md  2026-03-11-transcript-ad145178.md  (+177 more)
.githooks/: pre-push
crates/app/src-tauri/: Cargo.toml  tauri.conf.json
crates/app/src-tauri/capabilities/: default.json
crates/app/src-tauri/icons/: icon.icns
crates/app/src-tauri/src/: commands.rs  dock_menu.rs  dto.rs  handlers.rs  lib.rs  main.rs  state.rs  watcher.rs
crates/cli/: Cargo.toml
crates/cli/src/: main.rs  output.rs
crates/cli/src/commands/: config.rs  export.rs  federation.rs  graph.rs  init.rs  link.rs  mod.rs  node.rs  path.rs  reindex.rs  search.rs  serve.rs  stats.rs  status.rs  subgraph.rs  validate.rs
crates/cli/tests/: cli_integration.rs
crates/core/: Cargo.toml
crates/core/src/: config.rs  error.rs  export.rs  graph.rs  index.rs  lib.rs  logging.rs  model.rs  parser.rs  workspace.rs
crates/core/tests/: incremental.rs  performance.rs  seed_dataset.rs
crates/mcp/: Cargo.toml
crates/mcp/src/: lib.rs  server.rs
crates/mcp/src/tools/: federation.rs  graph.rs  link.rs  mod.rs  node.rs  search.rs  workspace.rs
crates/mcp/tests/: resource_tests.rs  tool_tests.rs
docs/: 01-vision.md  02-data-model.md  03-cli-spec.md  04-mcp-spec.md  05-desktop-app.md  06-architecture.md  07-roadmap.md  08-seed-dataset.md  09-spec-gaps.md  10-ux-improvements.md  CHANGELOG.md  canvas-architecture.md  error-recovery.md  improving-feedback-loops.md  logging.md
scripts/: check.sh  e2e-app.sh
seed/: Canvas Features Demo.canvas  The Smoking Controversy.canvas  example.md
(+1031 files in other folders)
