[workspace]
resolver = "2"
members = [
    "crates/core",
    "crates/cli",
    "crates/mcp",
]
exclude = [
    "crates/app/src-tauri",  # Phase 1c: not yet complete
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"

[workspace.dependencies]
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }
tracing-appender = "0.2"
