[package]
name = "brainmap"
version.workspace = true
edition.workspace = true

[[bin]]
name = "brainmap"
path = "src/main.rs"

[dependencies]
brainmap-core = { path = "../core", features = ["logging"] }
tracing = { workspace = true }
brainmap-mcp = { path = "../mcp" }
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
tokio = { version = "1", features = ["full"] }
rmcp = { version = "0.1", features = ["server", "transport-io"] }

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
tempfile = "3"
serde_json = "1"
serde_yaml = "0.9"
