[package]
name = "brainmap-app"
version = "0.1.0"
edition = "2021"

[dependencies]
brainmap-core = { path = "../../core", features = ["logging"] }
tauri = { version = "2", features = ["protocol-asset", "devtools"] }
tauri-plugin-dialog = "2"
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
tracing = "0.1"
notify = "7"
notify-debouncer-mini = "0.5"
tokio = { version = "1", features = ["sync", "rt"] }

[build-dependencies]
tauri-build = { version = "2", features = [] }

[lib]
name = "brainmap_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "brainmap-app"
path = "src/main.rs"
