[package]
name = "brainmap-app"
version = "0.1.0"
edition = "2021"

[dependencies]
brainmap-core = { path = "../../core", features = ["logging"] }
tauri = { version = "2", features = ["protocol-asset", "devtools"] }
tauri-plugin-dialog = "2"
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
tracing = "0.1"
notify = "7"
notify-debouncer-mini = "0.5"
tokio = { version = "1", features = ["sync", "rt"] }
ts-rs = { version = "10", features = ["serde-compat"] }
trash = "5"
tauri-plugin-drag = "2.1.0"
tauri-plugin-mcp = { git = "https://github.com/P3GLEG/tauri-plugin-mcp" }

[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.6"
objc2-foundation = { version = "0.3", features = ["NSString", "NSObject"] }
objc2-app-kit = { version = "0.3", features = ["NSApplication", "NSMenu", "NSMenuItem", "NSRunningApplication"] }

[dev-dependencies]
tempfile = "3"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[lib]
name = "brainmap_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "brainmap-app"
path = "src/main.rs"
